--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@remix-run/react": "^2.15.1",
     "@remix-run/serve": "^2.15.1",
     "@tabler/icons-react": "^3.26.0",
+    "ag-grid-community": "^33.0.3",
+    "ag-grid-react": "^33.0.3",
     "bcryptjs": "^2.4.3",
     "isbot": "^4.1.0",
+    "mysql2": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
