--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^32.3.3",
+    "@ag-grid-community/core": "^32.3.3",
     "@remix-run/node": "^2.15.1",
     "@remix-run/react": "^2.15.1",
     "@remix-run/serve": "^2.15.1",
     "@tabler/icons-react": "^3.26.0",
-    "ag-grid-community": "^33.0.3",
-    "ag-grid-react": "^33.0.3",
+    "ag-grid-react": "^32.3.3",
     "bcryptjs": "^2.4.3",
     "isbot": "^4.1.0",
     "mysql2": "^3.12.0",
